# exam-manager

./: .gitignore  ANALYTICS_NAVIGATION_NOTES.txt  CHANGE_TEST_DATE_FEATURE.md  CMakeLists.txt  PRODUCT_SPECIFICATION.md  build.ps1  meow.csv  mock_data_complete.csv  mock_data_courses.csv  mock_data_enrollments.csv  mock_data_students.csv  test_csv_import.cpp  test_gui.cpp  test_import.csv  test_pdf.cpp  test_pdf_export.cpp  test_simple_pdf.cpp
include/: DatabaseManager.h  LinkedList.h  Models.h  TimetableGenerator.h  analyticswindow.h  connectdialog.h  generatetimetabledialog.h  mainwindow.h  scheduletablemodel.h
src/: DatabaseManager.cpp  TimetableGenerator.cpp  analyticswindow.cpp  connectdialog.cpp  generatetimetabledialog.cpp  main.cpp  mainwindow.cpp  scheduletablemodel.cpp
ui/: analyticswindow.ui  connectdialog.ui  generatetimetabledialog.ui  mainwindow.ui
